<resources>
    <string name="app_name">Football_Management_System</string>

    <string name="sign_in_as">Sign In As</string>
    <string name="owner">Owner</string>
    <string name="manager">Manager</string>
    <string name="player">Player</string>
    <string name="general_user">General User</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>


    <string name="log_in_info">Log In Info</string>
    <string name="enter_user_mail_address">Enter_User_Mail_Address</string>
    <string name="enter_password">Enter_Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="log_in">Log In</string>
    <string name="submit">Submit</string>
    <string name="sign_up_info">Sign Up Info</string>
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_mail_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ent_password">Password</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="my_info">My Info</string>
    <string name="set_objectives">Set Objectives</string>
    <string name="set_income">Set Income</string>
    <string name="my_managers">Managers</string>
    <string name="my_players">Players</string>
    <string name="add_managers">Add Manager</string>
    <string name="add_players">Add Player</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="set_morale">Set Morale</string>
    <string name="view_income">View Income</string>
    <string name="current_match">Current Match</string>
    <string name="view_match">View Match</string>
    <string name="log_out">Log Out</string>
    <string name="view_goals">Goals</string>
    <string name="team_squad_info">Team Players</string>
    <string name="team_match_history">Team Match Statistics</string>


</resources>
