<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/manager_profile"
            android:title="@string/my_info"
            android:icon="@drawable/ic_person_black_24dp"
            />

        <item
            android:id="@+id/manager_view_income"
            android:title="@string/view_income"
            android:icon="@drawable/ic_attach_money_black_24dp"
            />
        <item
            android:id="@+id/manager_set_morale"
            android:title="@string/set_morale"
            android:icon="@drawable/ic_rate_review_black_24dp"
            />

        <item
            android:id="@+id/manager_current_match"
            android:title="@string/current_match"
            android:icon="@drawable/ic_play_circle_filled_black_24dp"
            />
        <item
            android:id="@+id/manager_view_match"
            android:title="@string/view_match"
            android:icon="@drawable/ic_pageview_black_24dp"
            />
        <item
            android:id="@+id/manager_log_out"
            android:title="@string/log_out"
            android:icon="@drawable/ic_eject_black_24dp"
            />
    </group>
</menu>